tests/reference/asr-test_assign10-7c2aa47.stderr
semantic error: 'f64' object does not support item assignment
 --> tests/errors/test_assign10.py:6:5
  |
6 |     i[0] = 3.1415926359
  |     ^^^^^^^^^^^^^^^^^^^ 
